kustomize/move2kube/base/03-knative-resources.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: __kfunction_name__
spec:
  template:
    # Note: can't be easily replaced with kustomize but it's not strictly needed
    # metadata:
      # name: __kfunction_name__-v1
    spec:
      initContainers:
        - name: volume-mount-hack
          image: quay.io/quay/busybox:latest 
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
          command: [ "sh", "-c", "cp /tmp/.ssh/id_rsa /etc/pre-install/. && chown 185 /etc/pre-install/id_rsa" ]
          volumeMounts:
            - name: ssh-priv-key
              mountPath: "/tmp/.ssh/id_rsa"
              subPath: id_rsa
              readOnly: true
            - name: pre-install
              mountPath: /etc/pre-install
      containers:
        - image: serverless-workflow-m2k-kfunc
          imagePullPolicy: Always
          env:
            - name: EXPORTED_FUNC
              value: saveTransformation
            - name: SSH_PRIV_KEY_PATH
              value: /home/jboss/.ssh/id_rsa
          envFrom:
          - configMapRef:
              name: move2kube-config # defines BROKER_URL and MOVE2KUBE_API         
          name: user-container
          volumeMounts:
            - name: pre-install
              readOnly: true
              mountPath: "/home/jboss/.ssh/id_rsa"
              subPath: id_rsa
            - name: ssh-pub-key
              readOnly: true
              mountPath: "/home/jboss/.ssh/id_rsa.pub"
              subPath: id_rsa.pub

          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
      volumes:
        - name: ssh-priv-key
          secret:
            secretName: __ssh_secret_name__
            defaultMode: 384
        - name: ssh-pub-key
          secret:
            secretName: __ssh_secret_name__
        - name: pre-install
          emptyDir: { }
