kustomize/move2kube/base/01-move2kube-instance.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __instance_name__
spec:
  selector:
    matchLabels:
      app: __instance_name__
  template:
    metadata:
      labels:
        app: __instance_name__
    spec:
      containers:
        - name: __instance_name__
          image: __instance_image__
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ssh-priv-key
              readOnly: true
              mountPath: "/root/.ssh/id_rsa"
              subPath: id_rsa
            - name: ssh-pub-key
              readOnly: true
              mountPath: "/root/.ssh/id_rsa.pub"
              subPath: id_rsa.pub
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "ssh-agent -a /tmp/unix-socket && ssh-add /root/.ssh/id_rsa" ]
      volumes:
        - name: ssh-priv-key
          secret:
            secretName: __ssh_secret_name__
            defaultMode: 384
        - name: ssh-pub-key
          secret:
            secretName: __ssh_secret_name__
---
apiVersion: v1
kind: Service
metadata:
  name: __instance_name__-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: __instance_name__
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: __instance_name__-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: __instance_name__-svc
